# UniversalUI-rs

./: .gitmodules  LICENSE  README.md  doc.md
universalui/: Cargo.toml
universalui/src/: application.rs  application_window.rs  lib.rs  string.rs  view.rs  window.rs  windowHandler.rs
universalui/src/win32/: lib.rs  window.rs
universalui_android/: Cargo.toml
universalui_core/: Cargo.toml
universalui_core/src/: application.rs  debug.rs  eventloop_provider.rs  geometry.rs  graphics_provider.rs  input.rs  interaction.rs  lib.rs  string.rs  surface.rs  view.rs  window.rs  window_controller.rs  window_delegate.rs  window_event.rs  window_provider.rs
universalui_core/src/old_code/: application.rs  application_type.rs  window.rs  window_controller.rs  window_visibility.rs
universalui_graphics/: Cargo.toml
universalui_graphics/src/: lib.rs  surface.rs
universalui_ios/: Cargo.toml
universalui_linux/: Cargo.toml
universalui_macos/: Cargo.toml
universalui_metal/: Cargo.toml
universalui_native/: Cargo.toml
universalui_native/src/: lib.rs  window.rs
universalui_native/src/windows/: event_loop.rs  mod.rs  window.rs
universalui_opengl/: Cargo.toml
universalui_realityos/: Cargo.toml
universalui_test/: Cargo.toml
universalui_test/src/: main.rs  mainVULKANTEST.rs  mainWGPU.rs
universalui_vulkan/: Cargo.toml
universalui_vulkan/universalui_windows/: Cargo.toml
universalui_vulkan/universalui_windows/oldSrc/win32/: lib.rs  window.rs
universalui_win32/: Cargo.toml
universalui_win32/src/: core.rs  lib.rs  window.rs
universalui_windowing/: Cargo.toml
universalui_windowing/src/: lib.rs
universalui_windows/: Cargo.toml
universalui_windows/oldSrc/: core.rs  window.rs
