[package]
name = "universalui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

exclude = [
    "win32/*"
]

[dependencies]
gl = "0.14.0"
glfw = "0.52.0"
universalui_core = { path = "../universalui_core" }
winit = "0.28.6"

#[target.'cfg(windows)'.dependencies]
#windows = { version = "0.48.0", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_System_LibraryLoader", "Win32_UI_WindowsAndMessaging"] }
