[package]
name = "universalui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
universalui_core = { path = "../universalui_core" }
universalui_native = { path = "../universalui_native" }
universalui_graphics = { path = "../universalui_graphics" }
