[package]
name = "universalui_native"
version = "0.1.0"
edition = "2021"

[dependencies]
cfg-if = "1.0.0"
universalui_core = { path = "../universalui_core" }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9.3"
#objc2 = "0.4.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.48.0", features = [ 
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader"] }
