[package]
name = "universalui_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.19"
pollster = "0.3.0"
raw-window-handle = "0.5.2"
universalui = { path = "../universalui" }
wgpu = "0.16.2"
winit = "0.28.6"


#anyhow = "1"
#lazy_static = "1"
#log = "0.4"
#nalgebra-glm = "0.18"
#png = "0.17"
#pretty_env_logger = "0.4"
#vulkanalia = { version = "=0.21.0", features = ["libloading", "provisional", "window"] }
#winit = "0.28"